--- a/src/View/Registration.form
+++ b/src/View/Registration.form
@@ -317,6 +317,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Log In"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="gotoLoginMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="contactField">
       <Properties>
